fixed spacing for shop pictures at full zoom

--- a/pinetreesoaps.com/css/shop.css
+++ b/pinetreesoaps.com/css/shop.css
@@ -14,13 +14,13 @@ header {
 }
 
 .soaps img {
-    width: 100%;
-    height: 250px;
+    width: 150px;
+    height: 200px;
     border-radius: 5px;
 }
 
 .soaps h3 {
-    margin-top: 0;
+    margin: 0;
     font-weight: 400;
 
 }
